- Added JResourceManager class and integrated support for it into
  JApplication and JEventLoop
- Added optional support for CURL library (used by JResourceManager)
- Added "dev" to JVersion::GetVersion() for when under development
- Fixed bugs in thread relaunching mechanism to prevent deadlocks
  and infinite recursion. (Also made default to NOT auto-relaunch).


Changes in version 0.6.5

- Added AddEventSource method to allow sources to be specified programatically
- Modified TestSpeed plugin to no longer require fake event source
- Adjusted default governor parameters in TestSpeed to run faster
- Improved handling of no or non-existent event sources
- Fixed bug where order of JCalibration returned vector did not maintain
  order in file. Zero padding guarantees ordering up to 9999 values.
- Added ClearAssociatedObjects method to JObject
- Added facility to manage 64bit status word with each event
- Fixed bug where factories added from plugins did NOT get preference
- Enhanced ctl-C signal handler to do a better job of forcing exits
  when multiple SIGINTs are received
- Added optional argument to JEventLoop::Get to allow any DEFTAG setting
  to be ignored making it easier to get objects from the default factory
- Improved exception handling, including throwing exception from
  JCalibrationFile when non-existent constants are requested

Changes in version 0.6.4

- Updated to use Xerces 3 or Xerces 2 (detected at configure level)
- Updated online documentation generation
- Added THREAD_TIMEOUT_FIRST_EVENT parameter
- Added ability to change the number of threads on the fly. This
  can be done using janactl, or progamatically using the JApplication
  pointer.
- Fixed bug that caused deadlock when --factoryreport specified
- Fixed bug where GetTag could cause seg. fault when used on object 
  created by event source
- Fixed bug that caused occasional deadlock when trying to merge
  threads at end of event processing
- Updated janaroot to accept stringtypes